# dotfiles

./: .cursorrules  .dotfiles-cli.json  .env.example  .gitignore  .gitmodules  .npmrc  .terminalizer-config.yml  .vercelignore  .versionrc.json  ARCHITECTURE.md  BRANCH_STRUCTURE.md  CONNECTION_MANAGER_README.md  DB_FIXES_SUMMARY.md  DB_MANAGER_README.md  HELP.md  INIT_SYSTEM_TO_REF.md  MODULAR_SYSTEM.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SECURITY.md  TODO.md  UI_TOOLKIT_SPEC.md  VERSION  WARP.md  bashrc  bootstrap  bootstrap.fish  bootstrap.sh  cfg  cleanup-list.txt  config.fish  debug-help  frontend-guidelines.md  help-simple  index.html  init.sh  initialize-shell.sh  install  install.sh  (+9 more)
.cli/: README.md  index.tsx  package.json  simple-menu.ts
.comment_remover_backups/: index.json  simple_test_20250704_210527.py  test_20250704_212211.py  test_20250704_212321.py  test_20250704_214520.py  test_comments_20250704_210057.py  test_comments_20250704_210506.py
_abandoned-misc/: README.md  (+1 more)
aliases/: a.fish  git  (+20 more)
apps/keybind-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/keybind-manager/src-tauri/capabilities/: default.json
apps/keybind-manager/src-tauri/core/: Cargo.toml
apps/keybind-manager/src-tauri/core/src/: devices.rs  distro.rs  error.rs  export.rs  keys.rs  lib.rs  model.rs  validation.rs
apps/keybind-manager/src-tauri/core/src/keyd/: generate.rs  mod.rs  parse.rs
apps/keybind-manager/src-tauri/core/tests/: golden.rs
apps/keybind-manager/src-tauri/core/tests/golden/: keybind-manager-external.conf  keybind-manager-laptop.conf
apps/keybind-manager/src-tauri/helper/: Cargo.toml
apps/keybind-manager/src-tauri/helper/src/: main.rs
apps/keybind-manager/src-tauri/src/: applying.rs  cli.rs  dotfiles.rs  lib.rs  main.rs  store.rs  system.rs
apps/keybind-manager/src-tauri/src/commands/: mod.rs
dotfiles-manager-app/src-tauri/: Cargo.toml  tauri.conf.json
dotfiles-manager-app/src-tauri/icons/: icon.icns
dotfiles-manager-app/src-tauri/src/: main.rs
dotfiles-manager/src-tauri/: Cargo.toml  tauri.conf.json
dotfiles-manager/src-tauri/src/: main.rs
(+996 files in other folders)
