[workspace]
members = ["core", "helper"]

[package]
name = "keybind-manager"
version = "0.1.0"
description = "GUI for system-wide keyboard remapping on KDE Plasma via keyd"
edition = "2021"
license = "MIT"

[lib]
name = "keybind_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keybind-core = { path = "core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
